--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "glob-parent": "^5.1.2",
+    "markdown-it": "^13.0.1",
+    "markdown-it-katex": "^2.0.3",
     "vue": "^2.6.14",
     "vuepress-theme-cosmos": "^1.0.183"
   },
