--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,6 +13,9 @@ concurrency:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: docs
     steps:
       - uses: actions/checkout@v3
       - name: Setup NodeJS and npm
@@ -26,7 +29,8 @@ jobs:
         with:
           node-version: "16"
           cache: "yarn"
+          cache-dependency-path: docs/yarn.lock
       - name: Install dependencies
-        run: cd docs && yarn
+        run: yarn
       - name: Build the application
-        run: cd docs && yarn build
+        run: yarn build
