--- a/docs/package.json
+++ b/docs/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "trap 'exit 0' SIGINT; vuepress dev --no-cache",
-    "postserve": "./post.sh",
-    "prebuild": "./pre.sh",
-    "build": "trap 'exit 0' SIGINT; vuepress build --no-cache",
-    "postbuild": "./post.sh"
+    "build": "trap 'exit 0' SIGINT; vuepress build --no-cache"
   },
   "author": "Nibiru Chain",
   "license": "ISC",
