--- a/docs/package.json
+++ b/docs/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
+    "vuepress-plugin-clean-urls": "^1.1.2",
     "watchpack": "^2.2.0"
   }
 }
